# Pico4ML-Magic-Wand

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
model-parameters/: dsp_blocks.h  model_metadata.h
source/: imu_provider.h  main.cpp  rasterize_stroke.cpp  rasterize_stroke.h
tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
tool/: json2png.py
